<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_registration_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activities.UserRegisterationActivity">

    <TextView
        android:id="@+id/userRegistrationHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/userRegistrationActivity_heading"
        android:textColor="@color/primary"
        android:textSize="@dimen/title" />


    <ProgressBar
        android:id="@+id/addressLoadingBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressEditText"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:progress="0"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userRegistrationActivity_nameLabel"
            android:textColor="@color/black"
            android:textSize="@dimen/body2" />

        <LinearLayout
            android:id="@+id/nameEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="10">


            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/userRegistrationActivity_firstNamePlaceholder"
                android:inputType="textPersonName"
                android:padding="10dp">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/userRegistrationActivity_lastNamePlaceholder"
                android:inputType="textPersonName"
                android:padding="10dp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userRegistrationActivity_addressLabel"
            android:textColor="@color/black"
            android:textSize="@dimen/body2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/userRegistrationActivity_addressPlaceholder"
                android:padding="10dp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/villageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userRegistrationActivity_villageLabel"
                android:textColor="@color/black"
                android:textSize="@dimen/body2" />

            <EditText
                android:id="@+id/villageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/userRegistrationActivity_villagePlaceholder"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/districtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userRegistrationActivity_districtLabel"
                android:textColor="@color/black"
                android:textSize="@dimen/body2" />

            <EditText
                android:id="@+id/districtEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/userRegistrationActivity_districtPlaceholder"
                android:padding="10dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="5.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userRegistrationActivity_stateLabel"
                android:textColor="@color/black"
                android:textSize="@dimen/body2" />

            <EditText
                android:id="@+id/stateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/userRegistrationActivity_statePlaceholder"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="4.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pinCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userRegistrationActivity_pinCodeLabel"
                android:textColor="@color/black"
                android:textSize="@dimen/body2" />

            <EditText
                android:id="@+id/pinCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/userRegistrationActivity_pinCodePlaceholder"
                android:padding="10dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/userRegistration_submitButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/registration_btn_bg"
        android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/nextActivityCTA"
        android:textColor="@color/white"
        android:textSize="@dimen/button" />

    <!--    <RelativeLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->
    <!--        -->
    <!--    </RelativeLayout>-->

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView"-->
    <!--        android:layout_width="50dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:src="@drawable/ic_launcher_background"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/textView13"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.709"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/textView8"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"-->
    <!--        app:layout_constraintVertical_bias="0.622"-->
    <!--        />-->

</LinearLayout>